# PySeqArray

./: DESIGN.md  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
PySeqArray/: __init__.py  _apply.py  _convert.py  _filter.py  _genotype.py  _getdata.py  _merge.py  _open.py  _snpbed.py  _types.py  _vcf.py  _vcf_import.py  _write.py  _writer.py
csrc/: Rshim.cpp  cclib.cpp  conn.cpp  gds_bridge.cpp  native_api.cpp  native_api.h  vcf_api.cpp  vcf_api.h
csrc/Rshim/: R.h  R_GDS.h  R_GDS2.h  R_GDS_CPP.h  Rdefines.h  Rinternals.h  Rshim_cpp.h  Rshim_error.h
csrc/Rshim/R_ext/: Connections.h  Rdynload.h  Utils.h
seqarray/: UPSTREAM_VERSION.txt
seqarray/src/: Index.cpp  Index.h
src/: GetData.cpp  Index.cpp  Index.h  Methods.cpp  PySeqArray.cpp  ReadByVariant.cpp  ReadByVariant.h  vectorization.cpp
tests/: test_core.py  test_engine.py  test_read.py
tools/: sync_seqarray.sh
